--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -63,8 +63,8 @@ jobs:
 
       - name: Run C++ demos
         run: |
-          export Basix_DIR=$(pwd)/_skbuild/linux-x86_64-3.10/cmake-install/python/basix/lib/cmake/basix/
-          echo $Basix_DIR
+          export INSTALL_DIR=$(pwd)/`python3 -c "import skbuild; print(skbuild.cmaker.CMAKE_INSTALL_DIR())"`
+          export PATH=$PATH:$INSTALL_DIR/python/basix/
           pytest demo/cpp/test.py
 
       - name: Build documentation
