--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -64,7 +64,8 @@ jobs:
       - name: Run C++ demos
         run: |
           export INSTALL_DIR=$(pwd)/`python3 -c "import skbuild; print(skbuild.cmaker.CMAKE_INSTALL_DIR())"`
-          export PATH=$PATH:$INSTALL_DIR/python/basix/
+          export Basix_DIR=$INSTALL_DIR/python/basix/lib/cmake/basix/
+          export PATH=$PATH:$INSTALL_DIR/python/basix/include:$INSTALL_DIR/python/basix/lib
           pytest demo/cpp/test.py
 
       - name: Build documentation
