--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -31,7 +31,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run: sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
+        run: |
+            sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
+            pip install scikit-build
 
       - name: Install Basix
         run: pip -v install .[ci]
@@ -60,6 +62,12 @@ jobs:
       - name: Run python demos
         run: |
           pytest demo/python/test.py
+
+      - name: Run C++ demos
+        run: |
+          export INSTALL_DIR=$(pwd)/`python3 -c "import skbuild; print(skbuild.cmaker.CMAKE_INSTALL_DIR())"`
+          export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$INSTALL_DIR/python/basix/lib/cmake:$INSTALL_DIR/python/basix/share/cmake
+          pytest demo/cpp/test.py
 
       - name: Build documentation
         run: |
@@ -142,7 +150,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run: sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
+        run: sudo apt-get install -y libopenblas-dev liblapack-dev ninja-build
 
       - name: Install CI dependencies
         run: pip install pytest sympy numba scipy matplotlib fenics-ufl pytest-xdist pybind11
@@ -161,3 +169,30 @@ jobs:
       - name: Run python demos
         run: |
           pytest demo/python/test.py
+
+  build-cpp-only:
+    name: Build C++ only and run demos
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: sudo apt-get install -y libopenblas-dev liblapack-dev ninja-build
+
+      - name: Install Basix
+        run: |
+          cmake -DCMAKE_BUILD_TYPE=Release -DDOWNLOAD_XTENSOR_LIBS=ON -B build-dir -S cpp
+          cmake --build build-dir
+          sudo cmake --install build-dir
+
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Run C++ demos
+        run: |
+          pip install pytest
+          pytest demo/cpp/test.py
