--- a/.github/workflows/ffcx-tests.yml
+++ b/.github/workflows/ffcx-tests.yml
@@ -56,6 +56,11 @@ jobs:
           repository: FEniCS/ffcx
           ref: ${{ github.event.inputs.ffcx_branch }}
 
+      - name: Run mypy checks
+        run: |
+          python -m pip install mypy
+          python -m mypy ffcx/ffcx
+
       - name: Install FFCx
         run: pip install ./ffcx[ci]
       - name: Run FFCx tests
