--- a/.github/workflows/ffcx-tests.yml
+++ b/.github/workflows/ffcx-tests.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Run mypy checks
         run: |
-          python -m pip install mypy
+          python -m pip install mypy types-setuptools
           python -m mypy ffcx/ffcx
 
       - name: Install FFCx
