--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -48,3 +48,15 @@ jobs:
           pip install pytest-xdist
           export LD_PRELOAD=/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_core.so:/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_sequential.so
           pytest -vs -n auto --durations 20 test/
+
+      - name: Run Python demos
+        run: |
+          . /opt/intel/oneapi/setvars.sh
+          export LD_PRELOAD=/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_core.so:/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_sequential.so
+          pytest demo/python/test.py
+
+      - name: Run C++ demos
+        run: |
+          . /opt/intel/oneapi/setvars.sh
+          export LD_PRELOAD=/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_core.so:/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_sequential.so
+          pytest demo/cpp/test.py
