--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -27,9 +27,10 @@ jobs:
         run: pip -v install .[ci]
 
       - name: Run units tests
-        run: |
-          pytest -n auto --durations 20 test/
+        run: pytest -n auto --durations 20 test/
 
       - name: Run python demos
-        run: |
-          pytest demo/python/test.py
+        run: pytest demo/python/test.py
+
+      - name: Run C++ demos
+        run: pytest demo/cpp/test.py
