--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -24,7 +24,9 @@ jobs:
         run: brew install ninja
 
       - name: Install Basix
-        run: pip -v install .[ci]
+        run: |
+          pip install scikit-build
+          pip -v install .[ci]
 
       - name: Run units tests
         run: pytest -n auto --durations 20 test/
@@ -33,4 +35,7 @@ jobs:
         run: pytest demo/python/test.py
 
       - name: Run C++ demos
-        run: pytest demo/cpp/test.py
+        run: |
+          export INSTALL_DIR=$(pwd)/`python3 -c "import skbuild; print(skbuild.cmaker.CMAKE_INSTALL_DIR())"`
+          export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$INSTALL_DIR/python/basix/lib/cmake:$INSTALL_DIR/python/basix/share/cmake
+          pytest demo/cpp/test.py
