--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Run units tests
         run: pytest -n auto --durations 20 test/
 
-      - name: Run python demos
-        run: pytest demo/python/test.py
+      #- name: Run python demos
+      #  run: pytest demo/python/test.py
 
       - name: Run C++ demos
         run: |
