--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           sed -i 's/enabled=0/enabled=1/' /etc/yum.repos.d/Rocky-PowerTools.repo
-          dnf install -y gcc-toolset-11-toolchain git blas-devel lapack-devel python39 python39-devel python39-pip cmake gcc-c++
+          dnf install -y gcc-toolset-11-toolchain git blas-devel lapack-devel python39 python39-devel python39-pip cmake
 
       - uses: actions/checkout@v3
 
@@ -44,6 +44,7 @@ jobs:
         run: python3 -m pytest demo/python/test.py
       - name: Run C++ demos
         run: |
+          source /opt/rh/gcc-toolset-11/enable
           export INSTALL_DIR=$(pwd)/`python3 -c "import skbuild; print(skbuild.cmaker.CMAKE_INSTALL_DIR())"`
           export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$INSTALL_DIR/python/basix/lib/cmake:$INSTALL_DIR/python/basix/share/cmake
           python3 -m pytest demo/cpp/test.py
