--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -32,7 +32,6 @@ jobs:
       - name: Install Basix
         run: |
           source /opt/rh/gcc-toolset-11/enable
-          python3 -m pip install scikit-build
           python3 -m pip install .[test]
 
       - name: Run units tests
@@ -45,6 +44,6 @@ jobs:
       - name: Run C++ demos
         run: |
           source /opt/rh/gcc-toolset-11/enable
-          export INSTALL_DIR=$(pwd)/`python3 -c "import skbuild; print(skbuild.cmaker.CMAKE_INSTALL_DIR())"`
-          export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$INSTALL_DIR/python/basix/lib/cmake:$INSTALL_DIR/python/basix/share/cmake
+          export INSTALL_DIR=`python3 -c "import basix; print('/'.join(basix.__file__.split('/')[:-1]) + '/lib/cmake')"`
+          export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$INSTALL_DIR
           python3 -m pytest demo/cpp/test.py
