--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -44,6 +44,6 @@ jobs:
       - name: Run C++ demos
         run: |
           source /opt/rh/gcc-toolset-11/enable
-          export INSTALL_DIR=`python3 -c "import basix; print('/'.join(basix.__file__.split('/')[:-1]) + '/lib/cmake')"`
-          export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$INSTALL_DIR
+          export INSTALL_DIR=`python3 -c "import basix; print('/'.join(basix.__file__.split('/')[:-1]))"`
+          export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$INSTALL_DIR/lib/cmake:$INSTALL_DIR/share/cmake
           python3 -m pytest demo/cpp/test.py
