--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           sed -i 's/enabled=0/enabled=1/' /etc/yum.repos.d/Rocky-PowerTools.repo
-          dnf install -y gcc-toolset-11-toolchain git blas-devel lapack-devel python39 python39-devel python39-pip
+          dnf install -y gcc-toolset-11-toolchain git blas-devel lapack-devel python39 python39-devel python39-pip cmake
 
       - uses: actions/checkout@v3
 
@@ -38,3 +38,12 @@ jobs:
         run: |
           python3 -m pip install pytest-xdist
           python3 -m pytest -n auto --durations 20 test/
+
+      - name: Run Python demos
+        run: python3 -m pytest demo/python/test.py
+      - name: Run C++ demos
+        run: |
+          source /opt/rh/gcc-toolset-11/enable
+          export INSTALL_DIR=`python3 -c "import basix; print('/'.join(basix.__file__.split('/')[:-1]))"`
+          export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$INSTALL_DIR/lib/cmake:$INSTALL_DIR/share/cmake
+          python3 -m pytest demo/cpp/test.py
