Remove xtensor code for Lagrange elements (#539)
* Start some mdspan

* Start with mdspan

* Updates

* Updates

* Intermediate steps

* Updates

* Doc update

* Fix.

* Install graphviz

* Add Sphinx lanuage

* Disable doc tests

* Simplify

* Simplifications

* More transition

* Improve readability

* Remove old code

* Re-factoring

* Simplifications

* Refactoring

* Quad refectoring

* Tidy up

* More refactoring

* Refactor

* Minor edit

* Less xtensor

* Fix bug

* More span.

* Install mdspan

* Various fixes

* Simplifications

* Remove more code

* Fix dox errors

* doxygen work-around

* More mdspan

* Remove more xtensor

* Updates for mdspan

* Simplifications

* Remove more xtensor

* Some span updates

* Work on Bernstein

* Use mdspan for bernstein

* More updates

* More xtensor removals

* More simplifications

* Simplifications

* const improvements

* Simplifications

* Remove old doc test

* Remove old doc file

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -110,6 +110,7 @@ set(HEADERS_basix
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-bubble.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-serendipity.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-hermite.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/mdspan.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/docs.h
   ${CMAKE_CURRENT_BINARY_DIR}/basix/version.h)
 
