--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -71,37 +71,37 @@ jobs:
           export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$INSTALL_DIR/python/basix/lib/cmake:$INSTALL_DIR/python/basix/share/cmake
           pytest demo/cpp/test.py
 
-      - name: Build documentation
-        run: |
-          pip install git+https://github.com/FEniCS/ufl.git
-          export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
-          cd doc/cpp
-          doxygen
-          cd ../python
-          make html
+      # - name: Build documentation
+      #   run: |
+      #     pip install git+https://github.com/FEniCS/ufl.git
+      #     export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
+      #     cd doc/cpp
+      #     doxygen
+      #     cd ../python
+      #     make html
 
-      - name: Upload C++ documentation artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: doc-cpp
-          path: |
-            doc/cpp/html
-          retention-days: 2
-          if-no-files-found: error
-      - name: Upload Python documentation artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: doc-python
-          path: |
-            doc/python/build/html
-          retention-days: 2
-          if-no-files-found: error
+      # - name: Upload C++ documentation artifact
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: doc-cpp
+      #     path: |
+      #       doc/cpp/html
+      #     retention-days: 2
+      #     if-no-files-found: error
+      # - name: Upload Python documentation artifact
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: doc-python
+      #     path: |
+      #       doc/python/build/html
+      #     retention-days: 2
+      #     if-no-files-found: error
 
-      - name: Build website documentation
-        run: |
-          export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
-          cd doc/web
-          python make_html.py
+      # - name: Build website documentation
+      #   run: |
+      #     export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
+      #     cd doc/web
+      #     python make_html.py
 
       - name: Set version name
         if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && matrix.python-version == '3.10' }}
