--- a/cpp/BasixConfig.cmake.in
+++ b/cpp/BasixConfig.cmake.in
@@ -2,9 +2,8 @@
 
 include(CMakeFindDependencyMacro)
 
-# xtensor
+# xtl
 find_dependency(xtl)
-find_dependency(xtensor)
 
 if(NOT TARGET @PROJECT_NAME@)
   include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
