--- a/.github/workflows/ffcx-tests.yml
+++ b/.github/workflows/ffcx-tests.yml
@@ -21,6 +21,9 @@ jobs:
   build:
     name: Run FFCx tests
     runs-on: ubuntu-latest
+    env:
+      CC: gcc-10
+      CXX: g++-10
 
     steps:
       - uses: actions/checkout@v3
