--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     name: Build and test (MacOS)
-    runs-on: macos-latest
+    runs-on: [macos-11, macos-12]
 
     steps:
       - uses: actions/checkout@v3
