Old clang in Mac OS 10.15 doesn't support modern C++ (#578)
* Old clang doesn't support stuff in span.

* Extend testing to new Mac OS

* Correct yaml syntax?

Co-authored-by: Matthew Scroggs <matthew.w.scroggs@gmail.com>
Co-authored-by: Jørgen Schartum Dokken <jsd55@cam.ac.uk>
Co-authored-by: Chris Richardson <chris@bpi.cam.ac.uk>

--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -12,7 +12,10 @@ on:
 jobs:
   build:
     name: Build and test (MacOS)
-    runs-on: macos-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-11, macos-12]
 
     steps:
       - uses: actions/checkout@v3
