Fix various typos
Found via `codespell -q 3 -L ans,nce,nd`

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -55,7 +55,7 @@ endif()
 
 # scikit-build specific steps
 if (SKBUILD)
-  # Add relative rpath so _basixcpp can find the Basix::basix libray
+  # Add relative rpath so _basixcpp can find the Basix::basix library
   # when the build is relocated
   if (APPLE)
     set_target_properties(_basixcpp PROPERTIES INSTALL_RPATH "@loader_path/lib")
