--- a/test/test_cmake/CMakeLists.txt
+++ b/test/test_cmake/CMakeLists.txt
@@ -4,6 +4,11 @@ cmake_minimum_required(VERSION 3.16)
 
 project(basix_test)
 
+# Set the C++ standard
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 # Use Python for detecting Basix
 find_package(Python3 COMPONENTS Interpreter REQUIRED)
 
