--- a/test/test_cmake/CMakeLists.txt
+++ b/test/test_cmake/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Example of CMakeLists.txt for downstream C++ project (eg DOLFINx)
-# Used to check correctly installed package during wheel creation.:
+# Used to check correctly installed package during tests and wheel creation.
 cmake_minimum_required(VERSION 3.16)
 
 project(basix_test)
