Specify C++20 in wheel integration test CMakeLists.txt (#586)
* Try GCC 11 based manylinux_2_28

* Bump cibuildwheel version

* Enable C++20

* CI runs on GCC 10, try again.

* Bug fix for pypi push action

* Test simple CMake project

* Reenable Python 3.7 builds.

--- a/test/test_cmake/CMakeLists.txt
+++ b/test/test_cmake/CMakeLists.txt
@@ -1,8 +1,13 @@
 # Example of CMakeLists.txt for downstream C++ project (eg DOLFINx)
-# Used to check correctly installed package during wheel creation.:
+# Used to check correctly installed package during tests and wheel creation.
 cmake_minimum_required(VERSION 3.16)
 
 project(basix_test)
+
+# Set the C++ standard
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Use Python for detecting Basix
 find_package(Python3 COMPONENTS Interpreter REQUIRED)
