--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -169,8 +169,9 @@ jobs:
         run: sudo apt-get install -y libopenblas-dev liblapack-dev ninja-build
 
       - name: Install CI dependencies
-        run: pip install pytest sympy numba scipy matplotlib fenics-ufl pytest-xdist pybind11
-
+        run: |
+          pip install pytest sympy numba scipy matplotlib fenics-ufl pytest-xdist pybind11
+          pip install git+https://github.com/wjakob/nanobind
       - name: Install Basix
         run: |
           cmake -DCMAKE_BUILD_TYPE=Release -DDOWNLOAD_XTENSOR_LIBS=ON -B build-dir -S .
