--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -38,7 +38,7 @@ jobs:
           sudo apt-get update
           sudo apt-get -y upgrade
           sudo apt-get install -y doxygen libgraphviz-dev libopenblas-dev liblapack-dev ninja-build
-          pip install git+https://github.com/wjakob/nanobind
+          pip install git+https://github.com/brettc/nanobind@numpy-buffer-bypass
           pip install scikit-build
 
       - name: Install Basix
@@ -171,7 +171,7 @@ jobs:
       - name: Install CI dependencies
         run: |
           pip install pytest sympy numba scipy matplotlib fenics-ufl pytest-xdist pybind11
-          pip install git+https://github.com/wjakob/nanobind
+          pip install git+https://github.com/brettc/nanobind@numpy-buffer-bypass
       - name: Install Basix
         run: |
           cmake -DCMAKE_BUILD_TYPE=Release -DDOWNLOAD_XTENSOR_LIBS=ON -B build-dir -S .
