--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -55,6 +55,7 @@ jobs:
         run: |
           pip install mypy
           python -m mypy python/basix
+        if: matrix.python-version != "3.10"
 
       - name: pydocstyle checks
         run: |
