--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Run C++ demos
         run: |
-          python3 -m pip install skbuild
+          python3 -m pip install scikit-build # Only installed previously in isolated build environment
           export INSTALL_DIR=$(pwd)/`python3 -c "import skbuild; print(skbuild.cmaker.CMAKE_INSTALL_DIR())"`
           export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$INSTALL_DIR/python/basix/lib/cmake:$INSTALL_DIR/python/basix/share/cmake
           python3 -m pytest demo/cpp/test.py
