--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     name: Build and test
     runs-on: ubuntu-latest
-    container: ubuntu:latest  # Run in container to test with minimal pre-installed packages
+    container: ubuntu:22.04  # Run in container to test with minimal pre-installed packages
 
     env:
       CC: icx
@@ -24,7 +24,7 @@ jobs:
 
     steps:
       - name: Install required packages to install Intel compilers and to build
-        run: apt-get update && apt-get install -y cmake git gnupg ninja-build python3-pip wget
+        run: apt -y update && apt install -y cmake git gnupg ninja-build python3-pip wget
 
       - uses: actions/checkout@v3
 
@@ -38,29 +38,24 @@ jobs:
       - name: Install Basix
         run: |
           . /opt/intel/oneapi/setvars.sh
-          export CMAKE_ARGS="-DDOWNLOAD_XTENSOR_LIBS:BOOL=true"
-          pip install scikit-build
-          pip install git+https://github.com/FEniCS/ufl.git
-          pip -v install .[test]
+          python3 -m pip -v install .[test]
       - name: Run units tests
         # LD_PRELOAD is required to 'fix' library resolution problems
         # when Numpy is not built against MKL
         run: |
           . /opt/intel/oneapi/setvars.sh
-          pip install pytest-xdist
           export LD_PRELOAD=/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_core.so:/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_sequential.so
-          pytest -n auto --durations 20 test/
+          python3 -m pip install pytest-xdist
+          python3 -m pytest -n auto --durations 20 test/
 
       - name: Run Python demos
         run: |
           . /opt/intel/oneapi/setvars.sh
           export LD_PRELOAD=/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_core.so:/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_sequential.so
-          pytest demo/python/test.py
+          python3 -m pytest demo/python/test.py
 
       - name: Run C++ demos
         run: |
           . /opt/intel/oneapi/setvars.sh
           export LD_PRELOAD=/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_core.so:/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_sequential.so
-          export INSTALL_DIR=$(pwd)/`python3 -c "import skbuild; print(skbuild.cmaker.CMAKE_INSTALL_DIR())"`
-          export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$INSTALL_DIR/python/basix/lib/cmake:$INSTALL_DIR/python/basix/share/cmake
-          pytest demo/cpp/test.py
+          python3 -m pytest demo/cpp/test.py
