--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     name: Build and test (Red Hat)
     runs-on: ubuntu-latest
-    container: rockylinux/rockylinux:8
+    container: rockylinux/rockylinux:9
 
     env:
       CC: gcc
@@ -24,15 +24,15 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
-          sed -i 's/enabled=0/enabled=1/' /etc/yum.repos.d/Rocky-PowerTools.repo
-          dnf install -y gcc-toolset-11-toolchain git blas-devel lapack-devel python39 python39-devel python39-pip cmake
+          dnf -y update
+          dnf install -y dnf-plugins-core
+          dnf config-manager --set-enabled crb
+          dnf install -y blas-devel cmake gcc gcc-c++ git lapack-devel python3 python3-devel python3-pip
 
       - uses: actions/checkout@v3
 
       - name: Install Basix
         run: |
-          source /opt/rh/gcc-toolset-11/enable
-          python3 -m pip install git+https://github.com/FEniCS/ufl.git
           python3 -m pip install .[test]
 
       - name: Run units tests
@@ -44,7 +44,4 @@ jobs:
         run: python3 -m pytest demo/python/test.py
       - name: Run C++ demos
         run: |
-          source /opt/rh/gcc-toolset-11/enable
-          export INSTALL_DIR=`python3 -c "import basix; print('/'.join(basix.__file__.split('/')[:-1]))"`
-          export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$INSTALL_DIR/lib/cmake:$INSTALL_DIR/share/cmake
           python3 -m pytest demo/cpp/test.py
